Fix numeric point plots; remove redundant layer clipping; fix overturned bed interpolation
Notebooks adjusted appropriately

--- a/notebooks/1. map2loop leaflet example.ipynb
+++ b/notebooks/1. map2loop leaflet example.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bc7e0e202394f32b8714e3cc9de2975",
+       "model_id": "227a7f0da5c94fff85c6c72ae5dc92de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33ff537b410045f6b73feb30e99c64ec",
+       "model_id": "0913afa78a854b088ad1cb81ec3bcaaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,7 +80,7 @@
     "import geopandas as gpd\n",
     "\n",
     "wms_warox = WMSLayer(\n",
-    "    url='http://geo.loop-gis.org/geoserver/loop/wms?',\n",
+    "    url='https://geo.loop-gis.org/geoserver/loop/wms?',\n",
     "    layers='loop:waroxi_wa_4326_bed',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
@@ -89,7 +89,7 @@
     "\n",
     ")\n",
     "wms_geol = WMSLayer(\n",
-    "    url='http://geo.loop-gis.org/geoserver/loop/wms?',\n",
+    "    url='https://geo.loop-gis.org/geoserver/loop/wms?',\n",
     "    layers='loop:2_5m_interpgeop15_4326',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
@@ -130,8 +130,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epsg:4326 [116.96634  -22.682063 117.436469 -22.46226 ]\n",
-      "epsg:28350 [ 496536.95905156 7491609.21430829  544905.53715229 7516005.50314791]\n"
+      "epsg:4326 [117.476155 -22.805899 117.848595 -22.555296]\n",
+      "epsg:28350 [ 548866.97969951 7477716.89838588  587249.85027139 7505629.43726814]\n"
      ]
     }
    ],
@@ -1936,7 +1936,7 @@
     "scrolled": false
    },
    "source": [
-    "## Clip geology, faults, structures and map geology to structures"
+    "## Join geology and structures, save fold axial traces"
    ]
   },
   {
@@ -1967,11 +1967,11 @@
     }
    ],
    "source": [
-    "geology = m2l_utils.explode(geology)\n",
-    "geology.crs = dst_crs\n",
+    "geol_clip = m2l_utils.explode(geology)\n",
+    "geol_clip.crs = dst_crs\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows',None)\n",
-    "structure_code = gpd.sjoin(sub_pts, geology, how=\"left\", op=\"within\")\n",
+    "structure_code = gpd.sjoin(sub_pts, geol_clip, how=\"left\", op=\"within\")\n",
     "\n",
     "y_point_list = [miny, miny, maxy, maxy, miny]\n",
     "x_point_list = [minx, maxx, maxx, minx, minx]\n",
@@ -1982,36 +1982,34 @@
     "#display(polygo.geometry)\n",
     "is_bed=structure_code[c_l['sf']].str.contains(c_l['bedding'], regex=False) \n",
     "    \n",
-    "all_beds = structure_code[is_bed]\n",
+    "structure_clip = structure_code[is_bed]\n",
     "\n",
     "if(workflow['fold_axial_traces']):\n",
-    "    all_folds=faults[faults[c_l['f']].str.contains(c_l['fold'])]\n",
-    "    folds_clip=m2l_utils.clip_shp(all_folds,polygo)\n",
-    "    folds_clip.crs = dst_crs\n",
-    "\n",
+    "    folds_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fold'])]\n",
+    "    #folds_clip=m2l_utils.clip_shp(all_folds,polygo)\n",
     "    if(len(folds_clip)>0):\n",
     "        folds_clip.to_file(tmp_path+'folds_clip.shp')\n",
     "\n",
     "\n",
-    "all_faults=faults[faults[c_l['f']].str.contains(c_l['fault'])]\n",
+    "#all_faults=faults[faults[c_l['f']].str.contains(c_l['fault'])]\n",
     "\n",
     "\n",
-    "geol_clip=gpd.overlay(geology, polygo, how='intersection')\n",
-    "faults_clip=m2l_utils.clip_shp(all_faults,polygo)\n",
+    "#geol_clip=gpd.overlay(geology, polygo, how='intersection')\n",
+    "#faults_clip=m2l_utils.clip_shp(all_faults,polygo)\n",
     "\n",
-    "structure_clip = m2l_utils.clip_shp(all_beds, polygo)\n",
+    "#structure_clip = m2l_utils.clip_shp(all_beds, polygo)\n",
     "\n",
     "#base = geol_clip.plot(column=c_l['c'],figsize=(7,7),edgecolor='#000000',linewidth=0.2)\n",
     "#faults_clip.plot(ax=base, column=c_l['f'],edgecolor='black')\n",
     "#structure_clip.plot(ax=base, column=c_l['c'],edgecolor='black')\n",
     "\n",
     "\n",
-    "#if(c_l['dd']=='strike'):\n",
-    "#    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
-    "#    c_l['dd']='azimuth2'\n",
+    "if(c_l['dd']=='strike'):\n",
+    "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
+    "    c_l['dd']='azimuth2'\n",
     "    \n",
-    "geol_clip.to_file(tmp_path+'geol_clip.shp')\n",
-    "structure_clip.crs = dst_crs\n",
+    "#geol_clip.to_file(tmp_path+'geol_clip.shp')\n",
+    "\n",
     "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
    ]
   },
@@ -2248,7 +2246,7 @@
    "source": [
     "m2l_geometry.save_orientations(structure_clip,output_path,c_l,orientation_decimate,dtm,dtb,dtb_null,workflow['cover_map'])\n",
     "\n",
-    "m2l_utils.plot_points(output_path+'orientations.csv',geol_clip, 'formation','X','Y',True)"
+    "m2l_utils.plot_points(output_path+'orientations.csv',geol_clip, 'formation','X','Y',True,'alpha')"
    ]
   },
   {
@@ -2405,7 +2403,7 @@
     "\n",
     "m2l_geometry.save_basal_contacts_csv(contacts,output_path,dtm,dtb,dtb_null,workflow['cover_map'],contact_decimate,c_l)\n",
     "\n",
-    "m2l_utils.plot_points(output_path+'contacts4.csv',geol_clip, 'formation','X','Y',False)\n"
+    "m2l_utils.plot_points(output_path+'contacts4.csv',geol_clip, 'formation','X','Y',False,'alpha')\n"
    ]
   },
   {
@@ -2708,7 +2706,7 @@
     "    m2l_interpolation.process_fault_throw_and_near_faults_from_grid(tmp_path,output_path,dtm_reproj_file,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,bbox,\n",
     "                                                                scheme,dip_grid,dip_dir_grid,x,y,spacing)\n",
     "\n",
-    "    m2l_utils.plot_points(output_path+'fault_displacements3.csv',geol_clip, 'apparent_displacement','X','Y',False)\n"
+    "    m2l_utils.plot_points(output_path+'fault_displacements3.csv',geol_clip, 'apparent_displacement','X','Y',True,'numeric')\n"
    ]
   },
   {
@@ -2920,7 +2918,7 @@
     "\n",
     "    m2l_geometry.normalise_thickness(output_path)\n",
     "    \n",
-    "    m2l_utils.plot_points(output_path+'formation_thicknesses_norm.csv',geol_clip,'norm_th','x','y',False)\n"
+    "    m2l_utils.plot_points(output_path+'formation_thicknesses_norm.csv',geol_clip,'norm_th','x','y',True,'numeric')\n"
    ]
   },
   {
@@ -3018,7 +3016,7 @@
     "if(workflow['polarity']):\n",
     "    m2l_geometry.save_orientations_with_polarity(output_path+'orientations.csv',output_path,c_l,tmp_path+'basal_contacts.shp',tmp_path+'all_sorts.csv',)\n",
     "\n",
-    "    m2l_utils.plot_points(output_path+'orientations_polarity.csv',geol_clip,'polarity','X','Y',True)\n"
+    "    m2l_utils.plot_points(output_path+'orientations_polarity.csv',geol_clip,'polarity','X','Y',True,'alpha')\n"
    ]
   },
   {
@@ -3078,8 +3076,8 @@
     "    m2l_geometry.fault_strat_offset(output_path,c_l,dst_crs,output_path+'formation_summary_thicknesses.csv', tmp_path+'all_sorts.csv',tmp_path+'faults_clip.shp',tmp_path+'geol_clip.shp',output_path+'fault_dimensions.csv')\n",
     "\n",
     "\n",
-    "    m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'min_offset','X','Y',True)\n",
-    "    m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'strat_offset','X','Y',True)\n"
+    "    m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'min_offset','X','Y',True,'numeric')\n",
+    "    m2l_utils.plot_points(output_path+'fault_strat_offset3.csv',geol_clip,'strat_offset','X','Y',True,'numeric')\n"
    ]
   },
   {
