Combine full and min thickness outputs, update map2model
full and min thickness now saved together
map2model fixed bug in igneous intrusive attribution, and allows buffer in geology polygons for vertex mismatch (currently hardwired to 3m)

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -1813,6 +1813,9 @@
     "    import lavavu\n",
     "    from LoopStructural.visualisation import LavaVuModelViewer\n",
     "    from LoopStructural import GeologicalModel\n",
+    "    import logging\n",
+    "    logging.getLogger().setLevel(logging.ERROR)\n",
+    "\n",
     "    f=open(tmp_path+'bbox.csv','w')\n",
     "    f.write('minx,miny,maxx,maxy,lower,upper\\n')\n",
     "    ostr='{},{},{},{},{},{}\\n'.format(minx,miny,maxx,maxy,model_base,model_top)\n",
