--- a/notebooks/1. map2loop leaflet example.ipynb
+++ b/notebooks/1. map2loop leaflet example.ipynb
@@ -88,6 +88,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## If you don't see a map above, please uncomment the next two lines of code\n",
+    "   \n",
+    "So they should look like this:   \n",
+    "\n",
+    "!conda install -c conda-forge ipyleaflet -y   \n",
+    "!jupyter nbextension enable --py --sys-prefix ipyleaflet   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1.#!conda install -c conda-forge ipyleaflet -y\n",
+    "2#!jupyter nbextension enable --py --sys-prefix ipyleaflet\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -239,7 +261,7 @@
     "polygon = gpd.GeoDataFrame(index=[0], crs=dst_crs, geometry=[bbox_geom]) \n",
     "bbox=(minx,miny,maxx,maxy)\n",
     "\n",
-    "dc.clear()"
+    "#dc.clear()"
    ]
   },
   {
@@ -1894,11 +1916,13 @@
    "source": [
     "if(workflow['model_engine']=='loopstructural'):\n",
     "    import random\n",
-    "    \n",
+    "    import logging\n",
     "    from LoopStructural import GeologicalModel\n",
     "    import lavavu\n",
     "    from LoopStructural.visualisation import LavaVuModelViewer\n",
     "    from LoopStructural import GeologicalModel\n",
+    "    logging.getLogger().setLevel(logging.ERROR)\n",
+    "    \n",
     "    model_base=-6000\n",
     "    f=open(tmp_path+'bbox.csv','w')\n",
     "    f.write('minx,miny,maxx,maxy,lower,upper\\n')\n",
@@ -1922,10 +1946,15 @@
     "                                                              fault_params=fault_params,\n",
     "                                                              foliation_params=foliation_params)\n",
     "  \n",
-    "    view = LavaVuModelViewer(model,vertical_exaggeration=2) \n",
+    "    view = LavaVuModelViewer(model,vertical_exaggeration=1) \n",
     "    view.nsteps = np.array([200,200,200])\n",
     "    #view.set_zscale(2)\n",
-    "    view.add_model(cmap='tab20')\n",
+    "    view.add_model(cmap='tab20')    \n",
+    "    i=0\n",
+    "    for sg in super_groups:\n",
+    "        gp_name=\"supergroup_\"+str(i)        \n",
+    "        view.add_data(model.features[model.feature_name_index[gp_name]])\n",
+    "        i=i+1    \n",
     "    view.nsteps=np.array([50,50,50])\n",
     "    view.add_model_surfaces()\n",
     "    view.interactive()  \n",
@@ -1950,7 +1979,8 @@
    "source": [
     "if(workflow['model_engine']=='loopstructural'):  \n",
     "    dtm = rasterio.open(dtm_reproj_file)\n",
-    "    m2l_export.display_LS_map(model,dtm,geol_clip,faults_clip,dst_crs,use_topo=True)\n",
+    "    f_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fault'])]\n",
+    "    m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True)\n",
     "    dtm.close()"
    ]
   },
@@ -1969,10 +1999,17 @@
    },
    "outputs": [],
    "source": [
-    "if(workflow['model_engine']=='loopstructural' and False):      \n",
-    "    voxels=model.evaluate_model(model.regular_grid(nsteps=(20,20,20)))\n",
-    "    display(voxels.reshape((20,20,20)))\n",
-    "    np.savetxt('../voxels.raw', voxels, fmt='%c',delimiter='\\t')"
+    "if(workflow['model_engine']=='loopstructural'):  \n",
+    "    voxel_size=500\n",
+    "    sizex=int((maxx-minx)/voxel_size)\n",
+    "    sizey=int((maxy-miny)/voxel_size)\n",
+    "    sizez=int((model_top-model_base)/voxel_size)\n",
+    "    print('voxel_size=',voxel_size,', saved in Z,Y,X order, X=',sizex,', Y=',sizey,', Z=',sizez)\n",
+    "    print('lower south west corner: west=',minx,', south=',miny,', lower=',model_base)\n",
+    "    voxels=model.evaluate_model(model.regular_grid(nsteps=(sizey,sizex,sizez),shuffle=False))\n",
+    "    #display(voxels.reshape((sizey,sizex,sizez)))\n",
+    "    np.savetxt(tmp_path+'voxels.raw', voxels, fmt='%d',delimiter='\\t',newline='')\n",
+    "    print('voxels saved as',tmp_path+'voxels.raw')"
    ]
   },
   {
