Fixes to thickness normalisation, data for lavavu and addition of column to geology layer
Add check for no result in formation thickness normalisaiton
add Series for unique ID to geology automatically
fix add of data to lavavu vierwer

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -1838,6 +1838,9 @@
     "                                                              skip_faults=False,\n",
     "                                                              fault_params=fault_params,\n",
     "                                                              foliation_params=foliation_params)\n",
+    "    for sg in model.feature_name_index:\n",
+    "        if( 'super' in sg):\n",
+    "            view.add_data(model.features[model.feature_name_index[sg]])\n",
     "  \n",
     "    view = LavaVuModelViewer(model,vertical_exaggeration=2) \n",
     "    view.nsteps = np.array([200,200,200])\n",
