--- a/notebooks/1. map2loop leaflet example.ipynb
+++ b/notebooks/1. map2loop leaflet example.ipynb
@@ -1950,11 +1950,11 @@
     "    view.nsteps = np.array([200,200,200])\n",
     "    #view.set_zscale(2)\n",
     "    view.add_model(cmap='tab20')    \n",
-    "    i=0\n",
-    "    for sg in super_groups:\n",
-    "        gp_name=\"supergroup_\"+str(i)        \n",
-    "        view.add_data(model.features[model.feature_name_index[gp_name]])\n",
-    "        i=i+1    \n",
+    "    \n",
+    "    for sg in model.feature_name_index:\n",
+    "        if( 'super' in sg):\n",
+    "            view.add_data(model.features[model.feature_name_index[sg]])\n",
+    "           \n",
     "    view.nsteps=np.array([50,50,50])\n",
     "    view.add_model_surfaces()\n",
     "    view.interactive()  \n",
