Lealet notebook now allows examples areas a well

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "## map2loop: Hamersely maps\n",
     "\n",
+    "<img src='../graphics/loop_sm.png'>\n",
+    "\n",
     "This notebook reads in three layers from  local or remote sources:  geology polygons, orientation data and fault polylines; and calculates the topological relationships between the different features. Requires compiled cpp code from Vitaliy Ogarko\n",
     "\n",
     "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a mdelling engine to make a 3D model \n"
