--- a/notebooks/1. map2loop leaflet example.ipynb
+++ b/notebooks/1. map2loop leaflet example.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## map2loop: Western Australia\n",
     "\n",
-    "This notebook allows you to select a rectangular sub-area in Western Australia, and using <a href=\"https://www.dmp.wa.gov.au/Geological-Survey/Geological-Survey-262.aspx\">GSWA</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
+    "<img src='../graphics/loop_sm.png'>\n",
+    "   \n",
+    "   This notebook allows you to select a rectangular sub-area in Western Australia, and using <a href=\"https://www.dmp.wa.gov.au/Geological-Survey/Geological-Survey-262.aspx\">GSWA</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
     "\n",
     "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a mdelling engine to make a 3D model.  \n",
     "  \n",
@@ -24,11 +26,56 @@
     "Codes here were developed as part of the <a href=\"https://loop3d.org/\">Loop</a> | <a href=\"https://minexcrc.com.au/\"> MinEx CRC</a> | <a href=\"https://www.darecentre.org.au/\">DARE</a> partnerships with export codes drawing heavily on the expertise of Miguel de la Varga (<a href=\"https://github.com/cgre-aachen/gempy\">gempy</a>), Lachlan Grose (Loop Structural, coming soon!), Des FItzgerald (<a href=\"https://www.intrepid-geophysics.com/product/geomodeller/Geomodeller\">Geomodeller</a>) and Florian Wellmann & Noe Pollack (<a href=\"https://github.com/cgre-aachen/pynoddy\">pynoddy</a>).\n",
     "\n",
     "### Instructions:   \n",
-    "1) Select rectangular area from map below, in an area with some bedding data (red dots). *I advise you start off near where the map open ups below, the further you stray, the harder it gets!*  \n",
+    "1) Select a pre-defined example area or draw your own rectangular area from map below, in an area with some bedding data (red dots). *I advise you start off with the examples, then near where the map open ups below, the further you stray, the harder it gets! Also don't draw too large a rectangle (50km x 50km), yes I know it needs a scale bar*  \n",
     "   \n",
     "2) Select a target modelling engine (loopstructural, gempy, geomodeller, noddy)   \n",
     "\n",
     "3) Run all code below that and post an issue at <a href=\"https://github.com/Loop3D/map2loop/issues\">github</a> when it crashes   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "import os\n",
+    "\n",
+    "# load last saved map area and mdoe engine (if they exist)\n",
+    "if(os.path.isfile('../last_choices.txt')):\n",
+    "    f=open('../last_choices.txt','r')\n",
+    "    contents =f.readlines()\n",
+    "    f.close()\n",
+    "    default_map=contents[0].replace(\"\\n\",\"\")\n",
+    "    default_engine=contents[1].replace(\"\\n\",\"\")\n",
+    "else:\n",
+    "    default_map='test_data3'\n",
+    "    default_engine='loopstructural'\n",
+    "\n",
+    "map_choice=widgets.Dropdown(\n",
+    "    options=['test_data3','Turner_Syncline','Draw Your Own'],\n",
+    "    value=default_map,\n",
+    "    description='Map area:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "display(map_choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data_name=map_choice.value\n",
+    "print(test_data_name)\n",
+    "if(not test_data_name =='Draw Your Own'):\n",
+    "    test_data_path='../'+test_data_name+'/'\n",
+    "\n",
+    "    os.chdir(test_data_path)\n",
+    "    print(os.getcwd())    \n",
+    "    %run -i \"m2l_config.py\"\n"
    ]
   },
   {
@@ -44,12 +91,40 @@
     "import json\n",
     "import random\n",
     "from shapely.geometry import Polygon\n",
-    "from ipyleaflet import Map, basemaps, GeoJSON, LayersControl, DrawControl,WMSLayer\n",
+    "from ipyleaflet import Map, basemaps, GeoJSON, LayersControl, DrawControl,WMSLayer, GeoData\n",
     "from ipywidgets import Label\n",
     "from ipywidgets import Label\n",
     "import ipywidgets as widgets\n",
     "import geopandas as gpd\n",
     "\n",
+    "\n",
+    "if(not test_data_name =='Draw Your Own'):\n",
+    "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
+    "\n",
+    "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
+    "    y_point_list = [miny, miny, maxy, maxy, maxy]\n",
+    "    x_point_list = [minx, maxx, maxx, minx, minx]\n",
+    "    bbox_geom = Polygon(zip(x_point_list, y_point_list))\n",
+    "    polygon = gpd.GeoDataFrame(index=[0], crs=dst_crs, geometry=[bbox_geom])\n",
+    "    polygon_ll=polygon.to_crs(src_crs)\n",
+    "\n",
+    "    minlong=polygon_ll.total_bounds[0]\n",
+    "    maxlong=polygon_ll.total_bounds[2]\n",
+    "    minlat=polygon_ll.total_bounds[1]\n",
+    "    maxlat=polygon_ll.total_bounds[3]\n",
+    "\n",
+    "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
+    "    lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
+    "    bbox_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
+    "    rect = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[bbox_geom]) \n",
+    "\n",
+    "    example_rect = GeoData(geo_dataframe = rect,\n",
+    "                   style={'color': 'purple', 'opacity':3, 'weight':1.9, 'dashArray':'2', 'fillOpacity':0.6},                  \n",
+    "                   name = 'Example')\n",
+    "    center=(minlat+((maxlat-minlat)/2),minlong+((maxlong-minlong)/2))\n",
+    "else:\n",
+    "    center=(-22.6,117.3)\n",
+    "    \n",
     "wms_warox = WMSLayer(\n",
     "    url='https://geo.loop-gis.org/geoserver/loop/wms?',\n",
     "    layers='loop:waroxi_wa_4326_bed',\n",
@@ -69,7 +144,7 @@
     "    name='geology'\n",
     "\n",
     ")\n",
-    "m =Map(basemap=basemaps.OpenTopoMap, center=(-22.6,117.3), zoom=9,scroll_wheel_zoom=True)\n",
+    "m =Map(basemap=basemaps.OpenTopoMap, center=center, zoom=8,scroll_wheel_zoom=True)\n",
     "label = Label()\n",
     "display(label)\n",
     "\n",
@@ -80,6 +155,9 @@
     "m.on_interaction(handle_interaction)\n",
     "m.add_layer(wms_geol)\n",
     "m.add_layer(wms_warox)\n",
+    "if(not test_data_name =='Draw Your Own'):\n",
+    "    m.add_layer(example_rect)\n",
+    "\n",
     "\n",
     "m.add_control(LayersControl())\n",
     "dc = DrawControl(rectangle={'shapeOptions': {'color': '#0000FF'}})\n",
@@ -120,31 +198,33 @@
    },
    "outputs": [],
    "source": [
-    "new_poly=GeoJSON(data=dc.last_draw)\n",
-    "new_poly=str(new_poly)\n",
+    "if(test_data_name=='Draw Your Own'):\n",
     "\n",
-    "if(\"'geometry': None\" in new_poly):\n",
-    "    raise NameError('map2loop error: No rectangle selected')\n",
-    "new_poly=new_poly.rsplit(\"'coordinates': \", 1)[1]\n",
-    "new_poly=new_poly.replace('[[[','').replace('[','').replace(']]]}})','').replace('],','').replace(',','').split(\" \")\n",
-    "longs=new_poly[0::2]\n",
-    "lats=new_poly[1::2]\n",
-    "minlong=float(min(longs))\n",
-    "maxlong=float(max(longs))\n",
-    "minlat=float(max(lats)) #ignores sign\n",
-    "maxlat=float(min(lats)) #ignores sign\n",
-    "bounds=(minlong,maxlong,minlat,maxlat)\n",
-    "src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-    "dst_crs = \"epsg:28350\" # coordinate system for example data\n",
+    "    new_poly=GeoJSON(data=dc.last_draw)\n",
+    "    new_poly=str(new_poly)\n",
+    "\n",
+    "    if(\"'geometry': None\" in new_poly):\n",
+    "        raise NameError('map2loop error: No rectangle selected')\n",
+    "    new_poly=new_poly.rsplit(\"'coordinates': \", 1)[1]\n",
+    "    new_poly=new_poly.replace('[[[','').replace('[','').replace(']]]}})','').replace('],','').replace(',','').split(\" \")\n",
+    "    longs=new_poly[0::2]\n",
+    "    lats=new_poly[1::2]\n",
+    "    minlong=float(min(longs))\n",
+    "    maxlong=float(max(longs))\n",
+    "    minlat=float(max(lats)) #ignores sign\n",
+    "    maxlat=float(min(lats)) #ignores sign\n",
+    "    bounds=(minlong,maxlong,minlat,maxlat)\n",
+    "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
+    "    dst_crs = \"epsg:28350\" # coordinate system for example data\n",
     "\n",
     "\n",
-    "lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
-    "lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
-    "bbox_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
-    "mbbox = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[bbox_geom]) \n",
-    "print(src_crs,mbbox.total_bounds)\n",
-    "mbbox=mbbox.to_crs(dst_crs)\n",
-    "print(dst_crs,mbbox.total_bounds)"
+    "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
+    "    lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
+    "    bbox_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
+    "    mbbox = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[bbox_geom]) \n",
+    "    print(src_crs,mbbox.total_bounds)\n",
+    "    mbbox=mbbox.to_crs(dst_crs)\n",
+    "    print(dst_crs,mbbox.total_bounds)"
    ]
   },
   {
@@ -241,17 +321,23 @@
    },
    "outputs": [],
    "source": [
-    "test_data_path='../scratch/'\n",
-    "minx=mbbox.total_bounds[0]\n",
-    "maxx=mbbox.total_bounds[2]\n",
-    "miny=mbbox.total_bounds[1]\n",
-    "maxy=mbbox.total_bounds[3]\n",
-    "bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
+    "if(test_data_name=='Draw Your Own'):\n",
+    "    test_data_path='../scratch/'\n",
+    "    minx=mbbox.total_bounds[0]\n",
+    "    maxx=mbbox.total_bounds[2]\n",
+    "    miny=mbbox.total_bounds[1]\n",
+    "    maxy=mbbox.total_bounds[3]\n",
+    "    \n",
+    "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "\n",
-    "os.chdir('../source_data/')\n",
-    "%run -i \"m2l_config_remote.py\"\n",
-    "#%run -i \"m2l_config_remote.py\"\n",
-    "print(os.getcwd())\n",
+    "    os.chdir('../source_data/')\n",
+    "    %run -i \"m2l_config_remote.py\"\n",
+    "    #%run -i \"m2l_config_remote.py\"\n",
+    "    print(os.getcwd())\n",
+    "    \n",
+    "else:\n",
+    "    test_data_path='../'+test_data_name+'/'\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -306,7 +392,6 @@
     "#spacing=500   #grid spacing in metres of interpolation points\n",
     "\n",
     "\n",
-    "local_paths=False\n",
     "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
@@ -2176,6 +2261,13 @@
     "\n",
     "    print(\"m2l\",(t1-t0)/60.0,\"noddy\",(t2-t1)/60.0,\"Total\",(t2-t0)/60.0,\"minutes\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
