Add sourcing formation colour info from parsed sld file
SLD parsing currently carried out in external notebook

--- a/notebooks/1. map2loop leaflet example.ipynb
+++ b/notebooks/1. map2loop leaflet example.ipynb
@@ -50,7 +50,7 @@
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
     "    default_engine=contents[1].replace(\"\\n\",\"\")\n",
     "else:\n",
-    "    default_map='test_data3'\n",
+    "    default_map='Turner_Syncline'\n",
     "    default_engine='loopstructural'\n",
     "\n",
     "map_choice=widgets.Dropdown(\n",
@@ -250,12 +250,27 @@
    "source": [
     "engine_choice=widgets.Dropdown(\n",
     "    options=['geomodeller', 'gempy','loopstructural','noddy','null'],\n",
-    "    value='loopstructural',\n",
+    "    value=default_engine,\n",
     "    description='Modeller:',\n",
     "    disabled=False,\n",
     ")\n",
     "display(engine_choice)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow={'model_engine':engine_choice.value} \n",
+    "print(workflow['model_engine'])\n",
+    "# save last map and engine choices\n",
+    "f=open('../last_choices.txt','w') \n",
+    "ostr=str(map_choice.value)+'\\n'+str(engine_choice.value)+'\\n'\n",
+    "f.write(ostr)\n",
+    "f.close()"
    ]
   },
   {
@@ -1824,7 +1839,7 @@
    },
    "outputs": [],
    "source": [
-    "m2l_geometry.tidy_data(output_path,tmp_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow)\n",
+    "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow)\n",
     "dtm.close()\n",
     "if(workflow['cover_map']):\n",
     "    dtb.close()"
