--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -1649,7 +1649,7 @@
    },
    "outputs": [],
    "source": [
-    "m2l_geometry.tidy_data(output_path,tmp_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow)\n",
+    "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow)\n",
     "dtm.close()\n",
     "if(workflow['cover_map']):\n",
     "    dtb.close()"
