--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -50,7 +50,7 @@
     "    default_engine='loopstructural'\n",
     "\n",
     "map_choice=widgets.Dropdown(\n",
-    "    options=['test_data3','Turner_Syncline'],\n",
+    "    options=['test_data3','Turner_Syncline','Draw Your Own'],\n",
     "    value=default_map,\n",
     "    description='Map area:',\n",
     "    disabled=False,\n",
@@ -1649,7 +1649,7 @@
    },
    "outputs": [],
    "source": [
-    "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow)\n",
+    "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow,c_l)\n",
     "dtm.close()\n",
     "if(workflow['cover_map']):\n",
     "    dtb.close()"
