Update 1. Hamersley map processing.ipynb
add data in wrong place

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -3450,7 +3450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
@@ -3462,6 +3462,17 @@
       "Please add SURFE to your environment variables to specify the location \n",
       " of the SURFE binaries\n",
       "Cannot import Surfe\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'view' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mm2l_config.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0msg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_name_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m         \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m'super'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m             \u001b[0mview\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_name_index\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msg\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m     \u001b[0mview\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLavaVuModelViewer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mvertical_exaggeration\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'view' is not defined"
      ]
     }
    ],
@@ -3500,9 +3511,6 @@
     "                                                              skip_faults=False,\n",
     "                                                              fault_params=fault_params,\n",
     "                                                              foliation_params=foliation_params)\n",
-    "    for sg in model.feature_name_index:\n",
-    "        if( 'super' in sg):\n",
-    "            view.add_data(model.features[model.feature_name_index[sg]])\n",
     "  \n",
     "    view = LavaVuModelViewer(model,vertical_exaggeration=2) \n",
     "    view.nsteps = np.array([200,200,200])\n",
@@ -3510,8 +3518,14 @@
     "    view.add_model(cmap='tab20')\n",
     "    view.nsteps=np.array([50,50,50])\n",
     "    view.add_model_surfaces()\n",
+    "    for sg in model.feature_name_index:\n",
+    "        if( 'super' in sg):\n",
+    "            view.add_data(model.features[model.feature_name_index[sg]])\n",
     "    view.interactive()  \n",
     "    \n",
+    "    for sg in model.feature_name_index:\n",
+    "        if( 'super' in sg):\n",
+    "            view.add_data(model.features[model.feature_name_index[sg]])\n",
     "\n",
     "    t2 = time.time()\n",
     "    print(\"m2l\",(t1-t0)/60.0,\"LoopStructural\",(t2-t1)/60.0,\"Total\",(t2-t0)/60.0,\"minutes\")"
